# agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: index.md  technical-guide.md  user-guide.md
docs/business/: marketing-assets.md  pricing-plans.md
docs/legal/: contract-template.md  sla-template.md  support-process.md
infra/: Dockerfile  docker-compose.yml
infra/monitoring/alertmanager/: alertmanager.yml
infra/monitoring/grafana/dashboards/: dashboard.yml
infra/monitoring/grafana/dashboards/json/: app-overview.json
infra/monitoring/prometheus/: alert_rules.yml  prometheus.yml
mashaver_konkur/: .env.example  app.py  db_manager.py  requirements.txt  study_agent.py
src/api/: __init__.py  database.py  dependencies.py  main.py  schemas.py
src/app/: __init__.py  __main__.py
src/dashboard/: __init__.py  api.py  app.py  config.py
src/data_pipeline/: __init__.py  cleaning.py  labelers.py  pipeline.py  storage.py
src/inference/: __init__.py  config.py  engine.py  loader.py  memory.py
src/models/: __init__.py  training.py
src/services/: __init__.py  api.py  inference.py
src/worker/: __init__.py  tasks.py
src/workers/: __init__.py  tasks.py
tests/: conftest.py  test_data_pipeline.py  test_inference_engine.py  test_training.py
