[tool.poetry]
name = "agent-project"
version = "0.1.0"
description = "Base Python project scaffold configured with modern development tooling."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "src" },
    { include = "models", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.38"
torch = "^2.2"
mlflow = "^2.12"

[tool.poetry.group.dev.dependencies]
black = "^23.9"
isort = "^5.12"
mypy = "^1.6"
pre-commit = "^3.4"
mkdocs = "^1.5"
mkdocs-material = "^9.4"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\\.(py|pyi)$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
strict_optional = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
namespace_packages = true
mypy_path = ["src"]

[tool.poetry.scripts]
app = "app.__main__:main"
